# pinzhuan

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
arrs/: 㕣.npy  一.npy  丁.npy  七.npy  丄.npy  丅.npy  万.npy  丈.npy  三.npy  上.npy  下.npy  丌.npy  不.npy  与.npy  丐.npy  丑.npy  且.npy  丕.npy  世.npy  丗.npy  丘.npy  丙.npy  业.npy  丞.npy  丟.npy  両.npy  丢.npy  严.npy  並.npy  丧.npy  丨.npy  丫.npy  丬.npy  中.npy  丱.npy  串.npy  临.npy  丶.npy  丸.npy  丹.npy  (+7752 more)
scripts/: anchorpoint.ipynb  calibrate.ipynb  calibrate.py  glyphoutline.ipynb  hint.py  hinting.ipynb  pack.ipynb  rasterize.ipynb  rasterize.py  storage.py  test.ipynb  test.py  utils.py
