[project]
name = "pinzhuan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freetype-py>=2.5.1",
    "matplotlib>=3.11.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
